fix word wrap
used word wrap break word in all elements. can cause issues

--- a/frontend/static/base.css
+++ b/frontend/static/base.css
@@ -3,6 +3,7 @@
     margin: 0;
     list-style-type: none;
     font-family: 'Montserrat', sans-serif;
+    word-wrap: break-word;
 }
 
 a {
